fix: align buttons centered

--- a/src/components/DownloadBtn/downloadbtn.css
+++ b/src/components/DownloadBtn/downloadbtn.css
@@ -40,3 +40,7 @@
   visibility: visible;
   opacity: 1;
 }
+
+.download {
+  display:none;
+}
